seaqt/QtGui/gen_qfont.nim


proc fcQFont_swap(self: pointer, other: pointer): void {.importc: "QFont_swap".}
proc fcQFont_family(self: pointer, ): struct_miqt_string {.importc: "QFont_family".}
proc fcQFont_setFamily(self: pointer, family: struct_miqt_string): void {.importc: "QFont_setFamily".}
proc fcQFont_families(self: pointer, ): struct_miqt_array {.importc: "QFont_families".}
proc fcQFont_setFamilies(self: pointer, families: struct_miqt_array): void {.importc: "QFont_setFamilies".}
proc fcQFont_styleName(self: pointer, ): struct_miqt_string {.importc: "QFont_styleName".}
proc fcQFont_setStyleName(self: pointer, styleName: struct_miqt_string): void {.importc: "QFont_setStyleName".}
proc fcQFont_pointSize(self: pointer, ): cint {.importc: "QFont_pointSize".}
proc fcQFont_setPointSize(self: pointer, pointSize: cint): void {.importc: "QFont_setPointSize".}
proc fcQFont_pointSizeF(self: pointer, ): float64 {.importc: "QFont_pointSizeF".}
proc fcQFont_setPointSizeF(self: pointer, pointSizeF: float64): void {.importc: "QFont_setPointSizeF".}
proc fcQFont_pixelSize(self: pointer, ): cint {.importc: "QFont_pixelSize".}
proc fcQFont_setPixelSize(self: pointer, pixelSize: cint): void {.importc: "QFont_setPixelSize".}
proc fcQFont_weight(self: pointer, ): cint {.importc: "QFont_weight".}
proc fcQFont_setWeight(self: pointer, weight: cint): void {.importc: "QFont_setWeight".}
proc fcQFont_bold(self: pointer, ): bool {.importc: "QFont_bold".}
proc fcQFont_setBold(self: pointer, bold: bool): void {.importc: "QFont_setBold".}
proc fcQFont_setStyle(self: pointer, style: cint): void {.importc: "QFont_setStyle".}
proc fcQFont_style(self: pointer, ): cint {.importc: "QFont_style".}
proc fcQFont_italic(self: pointer, ): bool {.importc: "QFont_italic".}
proc fcQFont_setItalic(self: pointer, b: bool): void {.importc: "QFont_setItalic".}
proc fcQFont_underline(self: pointer, ): bool {.importc: "QFont_underline".}
proc fcQFont_setUnderline(self: pointer, underline: bool): void {.importc: "QFont_setUnderline".}
proc fcQFont_overline(self: pointer, ): bool {.importc: "QFont_overline".}
proc fcQFont_setOverline(self: pointer, overline: bool): void {.importc: "QFont_setOverline".}
proc fcQFont_strikeOut(self: pointer, ): bool {.importc: "QFont_strikeOut".}
proc fcQFont_setStrikeOut(self: pointer, strikeOut: bool): void {.importc: "QFont_setStrikeOut".}
proc fcQFont_fixedPitch(self: pointer, ): bool {.importc: "QFont_fixedPitch".}
proc fcQFont_setFixedPitch(self: pointer, fixedPitch: bool): void {.importc: "QFont_setFixedPitch".}
proc fcQFont_kerning(self: pointer, ): bool {.importc: "QFont_kerning".}
proc fcQFont_setKerning(self: pointer, kerning: bool): void {.importc: "QFont_setKerning".}
proc fcQFont_styleHint(self: pointer, ): cint {.importc: "QFont_styleHint".}
proc fcQFont_styleStrategy(self: pointer, ): cint {.importc: "QFont_styleStrategy".}
proc fcQFont_setStyleHint(self: pointer, param1: cint): void {.importc: "QFont_setStyleHint".}
proc fcQFont_setStyleStrategy(self: pointer, s: cint): void {.importc: "QFont_setStyleStrategy".}
proc fcQFont_stretch(self: pointer, ): cint {.importc: "QFont_stretch".}
proc fcQFont_setStretch(self: pointer, stretch: cint): void {.importc: "QFont_setStretch".}
proc fcQFont_letterSpacing(self: pointer, ): float64 {.importc: "QFont_letterSpacing".}
proc fcQFont_letterSpacingType(self: pointer, ): cint {.importc: "QFont_letterSpacingType".}
proc fcQFont_setLetterSpacing(self: pointer, typeVal: cint, spacing: float64): void {.importc: "QFont_setLetterSpacing".}
proc fcQFont_wordSpacing(self: pointer, ): float64 {.importc: "QFont_wordSpacing".}
proc fcQFont_setWordSpacing(self: pointer, spacing: float64): void {.importc: "QFont_setWordSpacing".}
proc fcQFont_setCapitalization(self: pointer, capitalization: cint): void {.importc: "QFont_setCapitalization".}
proc fcQFont_capitalization(self: pointer, ): cint {.importc: "QFont_capitalization".}
proc fcQFont_setHintingPreference(self: pointer, hintingPreference: cint): void {.importc: "QFont_setHintingPreference".}
proc fcQFont_hintingPreference(self: pointer, ): cint {.importc: "QFont_hintingPreference".}
proc fcQFont_rawMode(self: pointer, ): bool {.importc: "QFont_rawMode".}
proc fcQFont_setRawMode(self: pointer, rawMode: bool): void {.importc: "QFont_setRawMode".}
proc fcQFont_exactMatch(self: pointer, ): bool {.importc: "QFont_exactMatch".}
proc fcQFont_operatorAssign(self: pointer, param1: pointer): void {.importc: "QFont_operatorAssign".}
proc fcQFont_operatorEqual(self: pointer, param1: pointer): bool {.importc: "QFont_operatorEqual".}
proc fcQFont_operatorNotEqual(self: pointer, param1: pointer): bool {.importc: "QFont_operatorNotEqual".}
proc fcQFont_operatorLesser(self: pointer, param1: pointer): bool {.importc: "QFont_operatorLesser".}
proc fcQFont_ToQVariant(self: pointer, ): pointer {.importc: "QFont_ToQVariant".}
proc fcQFont_isCopyOf(self: pointer, param1: pointer): bool {.importc: "QFont_isCopyOf".}
proc fcQFont_setRawName(self: pointer, rawName: struct_miqt_string): void {.importc: "QFont_setRawName".}
proc fcQFont_rawName(self: pointer, ): struct_miqt_string {.importc: "QFont_rawName".}
proc fcQFont_key(self: pointer, ): struct_miqt_string {.importc: "QFont_key".}
proc fcQFont_toString(self: pointer, ): struct_miqt_string {.importc: "QFont_toString".}
proc fcQFont_fromString(self: pointer, param1: struct_miqt_string): bool {.importc: "QFont_fromString".}
proc fcQFont_substitute(param1: struct_miqt_string): struct_miqt_string {.importc: "QFont_substitute".}
proc fcQFont_substitutes(param1: struct_miqt_string): struct_miqt_array {.importc: "QFont_substitutes".}
proc fcQFont_substitutions(): struct_miqt_array {.importc: "QFont_substitutions".}
proc fcQFont_insertSubstitution(param1: struct_miqt_string, param2: struct_miqt_string): void {.importc: "QFont_insertSubstitution".}
proc fcQFont_insertSubstitutions(param1: struct_miqt_string, param2: struct_miqt_array): void {.importc: "QFont_insertSubstitutions".}
proc fcQFont_removeSubstitutions(param1: struct_miqt_string): void {.importc: "QFont_removeSubstitutions".}
proc fcQFont_initialize(): void {.importc: "QFont_initialize".}
proc fcQFont_cleanup(): void {.importc: "QFont_cleanup".}
proc fcQFont_cacheStatistics(): void {.importc: "QFont_cacheStatistics".}
proc fcQFont_defaultFamily(self: pointer, ): struct_miqt_string {.importc: "QFont_defaultFamily".}
proc fcQFont_lastResortFamily(self: pointer, ): struct_miqt_string {.importc: "QFont_lastResortFamily".}
proc fcQFont_lastResortFont(self: pointer, ): struct_miqt_string {.importc: "QFont_lastResortFont".}
proc fcQFont_resolve(self: pointer, param1: pointer): pointer {.importc: "QFont_resolve".}
proc fcQFont_resolve2(self: pointer, ): cuint {.importc: "QFont_resolve2".}
proc fcQFont_resolveWithMask(self: pointer, mask: cuint): void {.importc: "QFont_resolveWithMask".}
proc fcQFont_setStyleHint2(self: pointer, param1: cint, param2: cint): void {.importc: "QFont_setStyleHint2".}
proc fcQFont_new(): ptr cQFont {.importc: "QFont_new".}
proc fcQFont_new2(family: struct_miqt_string): ptr cQFont {.importc: "QFont_new2".}
proc fcQFont_new3(font: pointer, pd: pointer): ptr cQFont {.importc: "QFont_new3".}
proc fcQFont_new4(font: pointer, pd: pointer): ptr cQFont {.importc: "QFont_new4".}
proc fcQFont_new5(font: pointer): ptr cQFont {.importc: "QFont_new5".}
proc fcQFont_new6(family: struct_miqt_string, pointSize: cint): ptr cQFont {.importc: "QFont_new6".}
proc fcQFont_new7(family: struct_miqt_string, pointSize: cint, weight: cint): ptr cQFont {.importc: "QFont_new7".}
proc fcQFont_new8(family: struct_miqt_string, pointSize: cint, weight: cint, italic: bool): ptr cQFont {.importc: "QFont_new8".}
proc fcQFont_staticMetaObject(): pointer {.importc: "QFont_staticMetaObject".}

proc swap*(self: gen_qfont_types.QFont, other: gen_qfont_types.QFont): void =
  fcQFont_swap(self.h, other.h)

proc family*(self: gen_qfont_types.QFont, ): string =
  let v_ms = fcQFont_family(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setFamily*(self: gen_qfont_types.QFont, family: string): void =
  fcQFont_setFamily(self.h, struct_miqt_string(data: family, len: csize_t(len(family))))

proc families*(self: gen_qfont_types.QFont, ): seq[string] =
  var v_ma = fcQFont_families(self.h)
  var vx_ret = newSeq[string](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[struct_miqt_string]](v_ma.data)
  for i in 0 ..< v_ma.len:
    let vx_lv_ms = v_outCast[i]
    let vx_lvx_ret = string.fromBytes(toOpenArrayByte(vx_lv_ms.data, 0, int(vx_lv_ms.len)-1))
    c_free(vx_lv_ms.data)
    vx_ret[i] = vx_lvx_ret
  c_free(v_ma.data)
  vx_ret

proc setFamilies*(self: gen_qfont_types.QFont, families: seq[string]): void =
  var families_CArray = newSeq[struct_miqt_string](len(families))
  for i in 0..<len(families):
    families_CArray[i] = struct_miqt_string(data: families[i], len: csize_t(len(families[i])))

  fcQFont_setFamilies(self.h, struct_miqt_array(len: csize_t(len(families)), data: if len(families) == 0: nil else: addr(families_CArray[0])))

proc styleName*(self: gen_qfont_types.QFont, ): string =
  let v_ms = fcQFont_styleName(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setStyleName*(self: gen_qfont_types.QFont, styleName: string): void =
  fcQFont_setStyleName(self.h, struct_miqt_string(data: styleName, len: csize_t(len(styleName))))

proc pointSize*(self: gen_qfont_types.QFont, ): cint =
  fcQFont_pointSize(self.h)

proc setPointSize*(self: gen_qfont_types.QFont, pointSize: cint): void =
  fcQFont_setPointSize(self.h, pointSize)

proc pointSizeF*(self: gen_qfont_types.QFont, ): float64 =
  fcQFont_pointSizeF(self.h)

proc setPointSizeF*(self: gen_qfont_types.QFont, pointSizeF: float64): void =
  fcQFont_setPointSizeF(self.h, pointSizeF)

proc pixelSize*(self: gen_qfont_types.QFont, ): cint =
  fcQFont_pixelSize(self.h)

proc setPixelSize*(self: gen_qfont_types.QFont, pixelSize: cint): void =
  fcQFont_setPixelSize(self.h, pixelSize)

proc weight*(self: gen_qfont_types.QFont, ): cint =
  fcQFont_weight(self.h)

proc setWeight*(self: gen_qfont_types.QFont, weight: cint): void =
  fcQFont_setWeight(self.h, weight)

proc bold*(self: gen_qfont_types.QFont, ): bool =
  fcQFont_bold(self.h)

proc setBold*(self: gen_qfont_types.QFont, bold: bool): void =
  fcQFont_setBold(self.h, bold)

proc setStyle*(self: gen_qfont_types.QFont, style: cint): void =
  fcQFont_setStyle(self.h, cint(style))

proc style*(self: gen_qfont_types.QFont, ): cint =
  cint(fcQFont_style(self.h))

proc italic*(self: gen_qfont_types.QFont, ): bool =
  fcQFont_italic(self.h)

proc setItalic*(self: gen_qfont_types.QFont, b: bool): void =
  fcQFont_setItalic(self.h, b)

proc underline*(self: gen_qfont_types.QFont, ): bool =
  fcQFont_underline(self.h)

proc setUnderline*(self: gen_qfont_types.QFont, underline: bool): void =
  fcQFont_setUnderline(self.h, underline)

proc overline*(self: gen_qfont_types.QFont, ): bool =
  fcQFont_overline(self.h)

proc setOverline*(self: gen_qfont_types.QFont, overline: bool): void =
  fcQFont_setOverline(self.h, overline)

proc strikeOut*(self: gen_qfont_types.QFont, ): bool =
  fcQFont_strikeOut(self.h)

proc setStrikeOut*(self: gen_qfont_types.QFont, strikeOut: bool): void =
  fcQFont_setStrikeOut(self.h, strikeOut)

proc fixedPitch*(self: gen_qfont_types.QFont, ): bool =
  fcQFont_fixedPitch(self.h)

proc setFixedPitch*(self: gen_qfont_types.QFont, fixedPitch: bool): void =
  fcQFont_setFixedPitch(self.h, fixedPitch)

proc kerning*(self: gen_qfont_types.QFont, ): bool =
  fcQFont_kerning(self.h)

proc setKerning*(self: gen_qfont_types.QFont, kerning: bool): void =
  fcQFont_setKerning(self.h, kerning)

proc styleHint*(self: gen_qfont_types.QFont, ): cint =
  cint(fcQFont_styleHint(self.h))

proc styleStrategy*(self: gen_qfont_types.QFont, ): cint =
  cint(fcQFont_styleStrategy(self.h))
